# spotlightpp

./: CMakeLists.txt  Makefile  README.md  example-config.toml
include/: apps.hpp  cli.hpp  config.hpp  state.hpp  utils.hpp
src/: apps.cpp  apps.hpp  cli.cpp  cli.hpp  config.cpp  config.hpp  main.cpp  state.cpp  tinyexpr.c  utils.cpp  utils.hpp
